[tool.poetry]
name = "dudaji-todo"
version = "0.1.0"
description = ""
authors = ["twotwobread <dltndud9137@naver.com>"]
readme = "README.md"
packages = [{include = "dudaji_todo"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
pytest = "^7.4.0"
pytest-flask = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
